# proposal_generator

./: .gitignore  README.md  constraints.txt  example_usage.py  kill_port.py  proposal.txt  pyproject.toml  pytest.ini  requirements-extra.txt  requirements-ml.txt  requirements-mockup.txt  requirements-web.txt  requirements.txt  setup.py  test_api_config.py  test_google_search.py  test_proposal.py
config/: agents.yaml  tasks.yaml
src/: cli.py  web_app.py
src/proposal_generator/: __init__.py  comprehensive_proposal.py  config.py  crew.py  generator.py  main.py
src/proposal_generator/components/: __init__.py  base_agent.py  competitive_analyzer.py  competitor_analyzer.py  competitor_finder.py  content_generator.py  market_agents.py  market_analyzer.py  mockup_generator.py  performance_analyzer.py  sentiment_analyzer.py  seo_analyzer.py  seo_screenshotter.py  utils.py  website_analyzer.py  website_screenshotter.py
src/proposal_generator/config/: __init__.py  litellm_config.py  workflow_config.py
src/proposal_generator/knowledge/: __init__.py  base.py  knowledge_source.py
src/proposal_generator/models/: content_model.py  task.py
src/proposal_generator/tools/: __init__.py  ai_tools.py  base_tool.py  code_optimization_tools.py  coding_tools.py  collaboration_tools.py  competitor_forecasting.py  competitor_tools.py  design_tools.py  management_tools.py  project_tools.py  quality_assurance_tools.py  (+1 more)
tests/: conftest.py  test_cli.py  test_integration.py
tests/proposal_generator/: test_concurrent_operations.py  test_cross_component_integration.py  test_main.py
(+108 files in other folders)
