[project]
name = "proposal_generator"
version = "0.1.0"
description = "Proposal-Generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
proposal_generator = "proposal_generator.main:run"
run_crew = "proposal_generator.main:run"
train = "proposal_generator.main:train"
replay = "proposal_generator.main:replay"
test = "proposal_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
